# ParallelismC-

./: .gitignore  CMakeLists.txt  README.md  build.sh  install_deps.sh  main.cpp  main_mpi.cpp  sync_worker.sh
arcface/: arcface.cpp  arcface.hpp
core/: face_processor.cpp  face_processor.hpp  response_builder.hpp
mpi/: master.cpp  master.hpp  task.hpp  worker.cpp  worker.hpp
storage/: embedding_db.cpp  embedding_db.hpp
supabase/: client.cpp  client.hpp  embedding_repo.cpp  embedding_repo.hpp  env_loader.hpp  face_quality.cpp  face_quality.hpp  http_client.cpp  http_client.hpp  json_utils.cpp  json_utils.hpp  person_repo.cpp  person_repo.hpp
zmq/: main.cpp  receiver.cpp  receiver.hpp  receiver_app  sender.cpp  sender.hpp
